--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "GPL",
   "dependencies": {
     "graphite": "0.0.6",
+    "nconf": "^0.8.4",
     "particle-api-js": "^5.2.5"
   }
 }
